--- a/main.css
+++ b/main.css
@@ -1,11 +1,37 @@
 body {
   font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
-  margin: 100px 80px;  
+ 
   background-color: rgb(151, 185, 185);
 }
 h1 {
-  padding: 10px;
+  margin: 0;
   font-size: 3em;
   font-weight: 1000;
 }
 
+img {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -1;
+  width: 100%;
+  height: 4em;
+}
+
+#search-todo, #add-todo {
+  border: 0;
+  border-radius: 4px;
+  height: 2em;
+  width: 25%;
+  margin: 20px;
+}
+
+label {
+  color: #C02A2A;
+  font-weight: bold;
+}
+
+button:hover {
+  background-color: #D45925;
+  cursor: pointer;
+}
